<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <Button
        android:id="@+id/back_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:backgroundTint="@color/white"
        android:drawableLeft="@drawable/ic_arrow_back"
        android:drawableTint="@color/pink"
        android:src="@drawable/ic_arrow_back"
        android:textSize="15sp"
        android:layout_marginLeft="5sp"
        android:textColor="@color/blue"
        style="?android:attr/borderlessButtonStyle"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <LinearLayout
        android:id="@+id/edit_profile_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|center_horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/edit_password_header"
        android:orientation="vertical">
        <TextView
            android:id="@+id/edit_profile_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0sp"
            android:paddingHorizontal="10sp"
            android:text="Edit Profile"
            android:textColor="@color/blue"
            android:textSize="27sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            app:boxBackgroundColor="@color/white"
            app:startIconDrawable="@drawable/ic_username"
            app:startIconTint="@color/pink"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            >
            <EditText
                android:id="@+id/username_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40sp"
                android:layout_marginEnd="40sp"
                android:drawableLeft="@drawable/ic_username"
                android:inputType="text"
                android:text="Username"
                android:textColor="@color/blue"
                android:textSize="20sp"
                 />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            app:boxBackgroundColor="@color/white"
            app:startIconDrawable="@drawable/ic_bio"
            app:startIconTint="@color/pink"
            >
            <EditText
                android:id="@+id/bio_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40sp"
                android:layout_marginEnd="40sp"
                android:layout_marginBottom="10sp"
                android:gravity="start"
                android:inputType="text"
                android:textSize="20sp"
                android:textColor="@color/blue"
                android:text="Bio"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </com.google.android.material.textfield.TextInputLayout>
        <Button
            android:id="@+id/save_profile_edits"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/pink"
            android:text="Save Changes"
            android:textColor="@color/blue"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/bio_create" />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/edit_password_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|center_horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_profile_header"
        android:orientation="vertical">
        <TextView
            android:id="@+id/edit_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="10sp"
            android:text="Edit Password"
            android:textColor="@color/blue"
            android:textSize="27sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:textColorHint="@color/blueLight"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/pink"
            app:boxBackgroundColor="@color/white"
            app:startIconDrawable="@drawable/ic_lock"
            app:startIconTint="@color/pink"
            >
            <EditText
                android:id="@+id/current_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40sp"
                android:layout_marginEnd="40sp"
                android:hint="Enter current password"
                android:inputType="textPassword"
                android:textColor="@color/blueLight"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@id/confirm_password"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:textColorHint="@color/blueLight"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/pink"
            app:boxBackgroundColor="@color/white"
            app:startIconDrawable="@drawable/ic_lock"
            app:startIconTint="@color/pink"
            >
            <EditText
                android:id="@+id/password_new_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40sp"
                android:layout_marginEnd="40sp"
                android:hint="Enter new password"
                android:inputType="textPassword"
                android:textColor="@color/blueLight"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@id/confirm_password"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:textColorHint="@color/blueLight"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/pink"
            app:boxBackgroundColor="@color/white"
            app:startIconDrawable="@drawable/ic_lock"
            app:startIconTint="@color/pink"
            >
            <EditText
                android:id="@+id/password_confirm_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40sp"
                android:layout_marginEnd="40sp"
                android:layout_marginBottom="10sp"
                android:hint="Confirm new password"
                android:inputType="textPassword"
                android:textColor="@color/blueLight"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@id/confirm_password"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </com.google.android.material.textfield.TextInputLayout>
        <Button
            android:id="@+id/save_password_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/pink"
            android:text="Save Password"
            android:textColor="@color/blue"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/bio_create" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>